syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "VehicleInteractType.proto";
import "VehicleMember.proto";

message VehicleInteractRsp {
	int32 retcode = 1;
	uint32 entity_id = 2;
	VehicleInteractType interact_type = 3;
	VehicleMember member = 4;
}
